fix scrollbar styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
+/* Let's get this party started */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: #111111; 
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+background: #111111; 
+}
+
 .button-grid {
   margin-top: 32px;
   display: grid;
